--- a/www/dar_safar.html
+++ b/www/dar_safar.html
@@ -140,7 +140,7 @@
 -->
 			<div id="slides">
 				<div class="silde_frame slide9th" >
-					<img src="images/slider/09.png" style="width:100%;" onclick="window.location.href='audio.html';" />
+					<img src="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='audio.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">اخبار مرز <img src="images/slider/next-btn.png"></div>
@@ -149,7 +149,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/01.png" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">نقشه <img src="images/slider/next-btn.png"></div>
@@ -158,7 +158,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide2th" >
-					<img src="images/slider/02.png" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/h02.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">لغات پرکاربرد <img src="images/slider/next-btn.png"></div>
@@ -167,7 +167,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide3th" >
-					<img src="images/slider/03.png" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
+					<img src="images/slider/h03.jpg" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">روضه <img src="images/slider/next-btn.png"></div>
@@ -176,7 +176,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide4th" >
-					<img src="images/slider/04.png" style="width:100%;" onclick="window.location.href='roze.html';" />
+					<img src="images/slider/h04.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">بعثت خون <img src="images/slider/next-btn.png"></div>
@@ -185,7 +185,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide5th" >
-					<img src="images/slider/05.png" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h05.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">بی خواص <img src="images/slider/next-btn.png"></div>
@@ -194,7 +194,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide6th" >
-					<img src="images/slider/06.png" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h06.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">شاعرانه <img src="images/slider/next-btn.png"></div>
@@ -203,7 +203,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide7th" >
-					<img src="images/slider/07.png" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h07.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">حسینیه <img src="images/slider/next-btn.png"></div>
@@ -212,7 +212,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide8th" >
-					<img src="images/slider/08.png" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h08.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
