--- a/www/dar_safar.html
+++ b/www/dar_safar.html
@@ -107,6 +107,9 @@
 			height: 100%;
 			overflow: hidden;
 		}
+		html{
+			background-color: #cfcfcf;
+		}
 	</style>
 </head>
 <body onload="init();" style="background-color:#cfcfcf;text-align:center;overflow:hidden;width:100%;">
