--- a/www/dar_safar.html
+++ b/www/dar_safar.html
@@ -143,20 +143,20 @@
 -->
 			<div id="slides">
 				<div class="silde_frame slide9th" >
-					<img src="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='audio.html';" />
+					<img src="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">اخبار مرز <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">لغات پرکاربرد</div>
+						<div class="slide_navigator_link" onclick="window.location.href='arabic.html';">لغات پرکاربرد</div>
 						<div class="slide_navigator_previous slidesjs-previous">آداب و احکام <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='news.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">نقشه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">اخبار مرز</div>
+						<div class="slide_navigator_link"onclick="window.location.href='news.html';">اخبار مرز</div>
 						<div class="slide_navigator_previous slidesjs-previous">مومنانه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
@@ -165,16 +165,16 @@
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">لغات پرکاربرد <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">نقشه</div>
+						<div class="slide_navigator_link" onclick="window.location.href='map.html';" >نقشه</div>
 						<div class="slide_navigator_previous slidesjs-previous">اخبار مرز <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide3th" >
-					<img src="images/slider/h03.jpg" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
+					<img src="images/slider/h03.jpg" style="width:100%;" onclick="window.location.href='ziyarat.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">روضه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">زیارات</div>
+						<div class="slide_navigator_link" onclick="window.location.href='ziyarat.html';" >زیارات</div>
 						<div class="slide_navigator_previous slidesjs-previous">نقشه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
@@ -183,43 +183,43 @@
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">بعثت خون <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">روضه</div>
+						<div class="slide_navigator_link"  onclick="window.location.href='roze.html';"  >روضه</div>
 						<div class="slide_navigator_previous slidesjs-previous">زیارات <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide5th" >
-					<img src="images/slider/h05.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h05.jpg" style="width:100%;" onclick="window.location.href='besate_khun.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">بی خواص <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">بعثت خون</div>
+						<div class="slide_navigator_link"  onclick="window.location.href='besate_khun.html';"  >بعثت خون</div>
 						<div class="slide_navigator_previous slidesjs-previous">روضه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide6th" >
-					<img src="images/slider/h06.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h06.jpg" style="width:100%;" onclick="window.location.href='bikhavas.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">شاعرانه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">بی خواص</div>
+						<div class="slide_navigator_link"  onclick="window.location.href='bikhavas.html';"  >بی خواص</div>
 						<div class="slide_navigator_previous slidesjs-previous">بعثت خون<img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide7th" >
-					<img src="images/slider/h07.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h07.jpg" style="width:100%;" onclick="window.location.href='shaerane.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">حسینیه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">شاعرانه</div>
+						<div class="slide_navigator_link"  onclick="window.location.href='shaerane.html';"  >شاعرانه</div>
 						<div class="slide_navigator_previous slidesjs-previous">بی خواص<img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide8th" >
-					<img src="images/slider/h08.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/h08.jpg" style="width:100%;" onclick="window.location.href='hoseinie.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">حسینیه</div>
+						<div class="slide_navigator_link"  onclick="window.location.href='hoseinie.html';"  >حسینیه</div>
 						<div class="slide_navigator_previous slidesjs-previous">شاعرانه<img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
