--- a/www/ghable_safar.html
+++ b/www/ghable_safar.html
@@ -143,47 +143,47 @@
 -->
 			<div id="slides">
 				<div class="silde_frame slide5th" >
-					<img src="images/slider/gh05.jpg" style="width:100%;" onclick="window.location.href='audio.html';" />
+					<img src="images/slider/gh05.jpg" style="width:100%;" onclick="window.location.href='momenane.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">پیشینه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">مومنانه</div>
+						<div class="slide_navigator_link" onclick="window.location.href='momenane.html';"  >مومنانه</div>
 						<div class="slide_navigator_previous slidesjs-previous">آداب و احکام <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/gh01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/gh01.jpg" style="width:100%;" onclick="window.location.href='pishine.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">فضیلت زیارت <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">پیشینه</div>
+						<div class="slide_navigator_link" onclick="window.location.href='pishine.html';"  >پیشینه</div>
 						<div class="slide_navigator_previous slidesjs-previous">مومنانه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide2th" >
-					<img src="images/slider/gh02.jpg" style="width:100%;" onclick="window.location.href='ziyarat-ashura.html';" />
+					<img src="images/slider/gh02.jpg" style="width:100%;" onclick="window.location.href='fazilate_ziyarat.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">کوله پشتی <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">فضیلت زیارت</div>
+						<div class="slide_navigator_link" onclick="window.location.href='fazilate_ziyarat.html';"  >فضیلت زیارت</div>
 						<div class="slide_navigator_previous slidesjs-previous">پیشینه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide3th" >
-					<img src="images/slider/gh03.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
+					<img src="images/slider/gh03.jpg" style="width:100%;" onclick="window.location.href='kuleposhti.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">آداب و احکام <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">کوله پشتی</div>
+						<div class="slide_navigator_link" onclick="window.location.href='kuleposhti.html';"  >کوله پشتی</div>
 						<div class="slide_navigator_previous slidesjs-previous">فضیلت زیارت <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<div class="silde_frame slide4th" >
-					<img src="images/slider/gh04.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<img src="images/slider/gh04.jpg" style="width:100%;" onclick="window.location.href='adab_ahkam.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link">آداب و احکام</div>
+						<div class="slide_navigator_link" onclick="window.location.href='adab_ahkam.html';"  >آداب و احکام</div>
 						<div class="slide_navigator_previous slidesjs-previous">کوله پشتی <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
