--- a/www/map.html
+++ b/www/map.html
@@ -405,10 +405,22 @@ L.marker([31.83483973,47.4282702], {icon: transport_icon}).bindPopup('توقفگ
 ////////////////////////////////////////////////////////////////////////////////////////////////		
 ////////////////////////////////////////////////////////////////////////////////////////////////
 //مراکز درمانی///////////////////////////////////////////////////////////////////////////////////
-L.marker([32.60985803,44.03081814], {icon: darmani_icon}).bindPopup('هتل ضیوف الرحمن').addTo(darmani);
-L.marker([32.62536997,44.03313105], {icon: darmani_icon}).bindPopup('هتل هدی الوالی').addTo(darmani);
-L.marker([32.61670818,44.03129439], {icon: darmani_icon}).bindPopup('درمانگاه سفیر').addTo(darmani);
+//L.marker([32.60985803,44.03081814], {icon: darmani_icon}).bindPopup('هتل ضیوف الرحمن').addTo(darmani);
+//L.marker([32.62536997,44.03313105], {icon: darmani_icon}).bindPopup('هتل هدی الوالی').addTo(darmani);
+//L.marker([32.61670818,44.03129439], {icon: darmani_icon}).bindPopup('درمانگاه سفیر').addTo(darmani);
 L.marker([31.99671432,44.32239353], {icon: darmani_icon}).bindPopup('هتل نبا').addTo(darmani);
+
+L.marker([32.00773352197744,44.34559013039667], {icon: darmani_icon}).bindPopup('بیمارستان حکیم').addTo(darmani);
+L.marker([32.01783084105517,44.37258733139262], {icon: darmani_icon}).bindPopup('بیمارستان صدر').addTo(darmani);
+L.marker([31.98750536580526,44.34119211845884], {icon: darmani_icon}).bindPopup('بیمارستان امام علی').addTo(darmani);
+L.marker([31.99675811750426,44.32279523471789], {icon: darmani_icon}).bindPopup('درمانگاه هلال احمر').addTo(darmani);
+L.marker([32.31709559338142,44.27156113381829], {icon: darmani_icon}).bindPopup('بیمارستان حیدریه').addTo(darmani);
+L.marker([32.58628026668129,44.02645245620648], {icon: darmani_icon}).bindPopup('بیمارستان الحسین').addTo(darmani);
+L.marker([32.59113209723427,44.04201816149397], {icon: darmani_icon}).bindPopup('بیمارستان الکفیل').addTo(darmani);
+L.marker([32.60951606209149,44.03086738895918], {icon: darmani_icon}).bindPopup('درمانگاه هلال احمر- هتل ضیوف الرحمن').addTo(darmani);
+L.marker([32.61673588651463,44.03127805094174], {icon: darmani_icon}).bindPopup('هتل سفیر').addTo(darmani);
+L.marker([32.6252571776183,44.03370455791725], {icon: darmani_icon}).bindPopup('درمانگاه هلال احمر- هتل هدی الوالی').addTo(darmani);
+L.marker([32.62959543633673,44.03861156301936], {icon: darmani_icon}).bindPopup('بیمارستان امام سجاد').addTo(darmani);
 ////////////////////////////////////////////////////////////////////////////////////////////////		
 ////////////////////////////////////////////////////////////////////////////////////////////////
 //گم شدگان///////////////////////////////////////////////////////////////////////////////////
@@ -888,7 +900,7 @@ L.marker([32.6104754,44.03110044], {icon: hotel_icon}).bindPopup('Zoyoof Rahman'
 	var overlays = {
 		"نقاط مورد علاقه": favorites,
 		"مکان های زیارتی": ziyarati,
-		"بیمارستان ها": bimarestan,
+		//"بیمارستان ها": bimarestan,
 		"مراکز درمانی": darmani,
 		"موکب ، حسینیه": mukeb,
 		"موکب های در اختیار ایرانی ها": mukeb_irani,
