--- a/www/index.html
+++ b/www/index.html
@@ -89,7 +89,7 @@
             </p>
         </div>
 		
-	<div id="status"></div>
+	<div id="status">00000000000</div>
        
     </body>
 </html>
