--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,10 @@
 		
 		alert("2:" + fileSystem.root.fullPath);
 		var downloadPath = fileSystem.root.fullPath + "/download.mp3";
-		downloadPath = "cdvfile://localhost/persistent/" + "/download.mp3";
+		if ( device.platform == 'iOS' ){//Android,iOS,win7=WinCE,win8=Win32NT
+			//downloadPath = "/android_asset/www/" + "/download.mp3";
+			downloadPath = "cdvfile://localhost/persistent/" + "/download.mp3";
+		}
 
 		ft.onprogress = function(progressEvent) {
 			if (progressEvent.lengthComputable) {
@@ -58,11 +61,17 @@
 		};
 							
 		ft.download(uri, downloadPath, 
-		function(entry) {
-			alert("3");
-			
+		function(entry) {	
 			$('#status').html("done");
-			var media = new Media(entry.fullPath, null, function(e) { alert(JSON.stringify(e));});
+			if ( device.platform == 'iOS' ){//Android,iOS,win7=WinCE,win8=Win32NT
+				//downloadPath = "/android_asset/www/" + "/download.mp3";
+				downloadPath = "cdvfile://localhost/persistent/" + "/download.mp3";
+			}
+			else
+				downloadPath = "/android_asset/www/" + "/download.mp3";
+				//downloadPath = "cdvfile://localhost/persistent/" + "/download.mp3";
+			}
+			var media = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
 			media.play();
 			
 		}, 
